--- a/page_elements/style.css
+++ b/page_elements/style.css
@@ -1,10 +1,29 @@
-.error {color: #FF0000;}
-.success {color: #00FF00;}
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+.topnav > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    position: sticky;
+}
+a {
+    display: block;
+    font-weight: bold;
+    color: black;
+    margin: 0px 5px 0px 5px;
+}
+a:link { text-decoration: none; }
+
+a:visited { text-decoration: none; }
+
+a:hover { text-decoration: none; }
+
+a:active { text-decoration: none; }
 
 
 
@@ -17,8 +36,13 @@ body > .todo{
     border: 3px solid black;
     padding: 5px;
     
+    display: flex;
+    justify-content: space-between;
+
     margin-top: 5px;
     margin-bottom: 5px;
+
+    min-height: 30px;
 }
 
 .todoGrid{
@@ -39,13 +63,14 @@ body > .todo{
 }
 
 #LeftButtons{
-    margin-left: 5%;
-}
+    margin-left: 10px;
+;}
 #todoBody{
 }
 
 #Days{
-    margin-right: 5%;
+    margin-right: 10px;
+    float: right;
 }
 
 /*Buttons*/
@@ -91,10 +116,14 @@ body > .todo{
 
 #todoBody > .Title{
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #todoBody > .Description{
     font-weight: normal;
-    font-size: 15px;
+    font-size: 10px;
+    min-height: 10px;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
