--- a/page_elements/style.css
+++ b/page_elements/style.css
@@ -53,13 +53,13 @@ body > .todo{
 }
 
 #imp1{
-    background-color: green;
+    background-color: rgb(128, 160, 128);
 }
 #imp2{
-    background-color: yellow;
+    background-color: rgb(255, 255, 137);
 }
 #imp3{
-    background-color: red;
+    background-color: rgb(253, 122, 122);
 }
 
 #LeftButtons{
@@ -87,7 +87,7 @@ body > .todo{
 }
   
 #LeftButtons > .DoneButton > input:hover {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     color: white;
     cursor:pointer;  
 }
@@ -98,11 +98,29 @@ body > .todo{
     border-radius: 5px;
     border: 2px solid gray; 
     transition-duration: 0.4s; 
+    margin-bottom: 5px;
     
 }
   
 #LeftButtons > .EditButton > a > button:hover {
-    background-color: gray; /* Green */
+    background-color: gray;
+    color: white;
+    cursor:pointer;  
+}
+
+
+#LeftButtons > .DeleteButton > input {
+    width: 50px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    border: 2px solid red; 
+    transition-duration: 0.4s;
+    
+}
+  
+#LeftButtons > .DeleteButton > input:hover {
+    background-color: red;
     color: white;
     cursor:pointer;  
 }
@@ -123,7 +141,4 @@ body > .todo{
     font-weight: normal;
     font-size: 10px;
     min-height: 10px;
-    word-wrap: break-word;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
